<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <include layout="@layout/head"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/vip_level"
            android:textColor="@color/color_999999"
            android:textSize="15sp"/>

        <TextView
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/deadline"
            android:textColor="@color/color_999999"
            android:textSize="15sp"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/state"
            android:textColor="@color/color_999999"
            android:textSize="15sp"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/purchase_type"
            android:textColor="@color/color_999999"
            android:textSize="15sp"/>

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/apply_time"
            android:textColor="@color/color_999999"
            android:textSize="15sp"/>

    </LinearLayout>

    <View
        android:layout_marginTop="15dp"
        style="@style/view_line"/>
    
   <include layout="@layout/listview"/>

</LinearLayout>