<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7fAAAAAA"
    android:id="@+id/rl_inquire_bg">

    <LinearLayout
        android:clickable="true"
        android:layout_marginTop="158dp"
        android:orientation="vertical"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:background="@drawable/white_bg"
        android:layout_width="match_parent"
        android:layout_height="221dp">

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/tankuang_bg"
            android:gravity="center"
            android:text="@string/inquire_start_time"
            android:textColor="@color/color_333333"
            android:textSize="15sp"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:gravity="center"
            android:text="至"
            android:textColor="@color/color_999999"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:background="@drawable/tankuang_bg"
            android:gravity="center"
            android:text="@string/inquire_end_time"
            android:textColor="@color/color_333333"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="330dp"
        android:layout_width="match_parent"
        android:layout_height="57dp">
        
        <TextView
            android:id="@+id/tv_commit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@mipmap/bg_blue_botton"
            android:text="@string/commit"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_back"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@mipmap/bg_white_botton"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/color_48c6ef"
            android:textSize="15sp"/>

    </LinearLayout>

</RelativeLayout>