<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <include layout="@layout/head"/>
    
    <ScrollView
        android:scrollbars="none"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <TextView
                    android:id="@+id/tv_announce_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/announce_title"
                    android:textColor="@color/color_333333"
                    android:textSize="15sp"/>
                
                <EditText
                    android:id="@+id/et_announce_title"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/tv_announce_title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:textSize="14sp"
                    android:textColor="@color/color_999999"
                    android:hint="@string/input_title"
                    android:textColorHint="@color/color_999999"
                    android:singleLine="true"
                    android:maxLength="50"
                    android:gravity="right" />

            </RelativeLayout>

            <View
                android:layout_marginTop="16dp"
                style="@style/view_line"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="10dp"
                android:text="@string/announce_content"
                android:textColor="@color/color_333333"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_announce_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="7"
                    android:background="@null"
                    android:textSize="14sp"
                    android:textColor="@color/color_999999"
                    android:maxLength="500"
                    android:gravity="top"
                    android:hint="@string/input_content"
                    android:textColorHint="@color/color_999999" />

            </LinearLayout>

            <View
                style="@style/view_line"/>

            <com.example.administrator.zhixueproject.view.ClickTextView
                android:id="@+id/tv_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="31dp"
                android:layout_marginRight="31dp"
                android:background="@mipmap/bg_botton"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:text="@string/commit"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>