<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_head"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_title">

        <com.example.administrator.zhixueproject.view.CircleImageView
            android:id="@+id/img_fc_head"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/head_bg"/>

        <TextView
            android:id="@+id/tv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/iv_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:scaleType="fitXY"
            android:src="@mipmap/institution_icon" />

    </RelativeLayout>
    <!--C端会员管理-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_member_manager"
            android:layout_width="match_parent"
            android:layout_height="18dp">

            <ImageView
                android:id="@+id/iv_member_manager"
                style="@style/iv_icon"
                android:background="@mipmap/c_member_icon" />

            <TextView
                style="@style/tv_item"
                android:layout_toRightOf="@+id/iv_member_manager"
                android:text="@string/C_member_manager" />

            <ImageView style="@style/iv_right_arrow" />
        </RelativeLayout>

        <View
            style="@style/view_line"
            android:layout_marginTop="17dp" />
    </LinearLayout>

    <!--会员申请-->
    <RelativeLayout
        android:id="@+id/rl_member_application"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/iv_member_application"
            style="@style/iv_icon"
            android:background="@mipmap/member_apply_icon" />

        <TextView
            style="@style/tv_item"
            android:layout_toRightOf="@+id/iv_member_application"
            android:text="@string/member_application" />

        <ImageView style="@style/iv_right_arrow" />

        <View style="@style/view_line" />
    </RelativeLayout>
    <!--踢出的会员-->
    <RelativeLayout
        android:id="@+id/rl_kick_out_member"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/iv_kick_out_member"
            style="@style/iv_icon"
            android:background="@mipmap/kick_out_icon" />

        <TextView
            style="@style/tv_item"
            android:layout_toRightOf="@+id/iv_kick_out_member"
            android:text="@string/kick_out_member" />

        <ImageView style="@style/iv_right_arrow" />

        <View style="@style/view_line" />
    </RelativeLayout>
    <!--黑名单-->
    <RelativeLayout
        android:id="@+id/rl_black_list"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/iv_black_list"
            style="@style/iv_icon"
            android:background="@mipmap/black_list_icon" />

        <TextView
            style="@style/tv_item"
            android:layout_toRightOf="@+id/iv_black_list"
            android:text="@string/black_list" />

        <ImageView style="@style/iv_right_arrow" />

        <View style="@style/view_line" />
    </RelativeLayout>
    <!--签到管理-->
    <RelativeLayout
        android:id="@+id/rl_sign_in_manager"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/iv_sign_in_manager"
            style="@style/iv_icon"
            android:background="@mipmap/sign_in_icon" />

        <TextView
            style="@style/tv_item"
            android:layout_toRightOf="@+id/iv_sign_in_manager"
            android:text="@string/sign_in_manager" />

        <ImageView style="@style/iv_right_arrow" />

        <View style="@style/view_line" />
    </RelativeLayout>

</LinearLayout>

<RelativeLayout
android:id="@+id/left_menu"
android:layout_gravity="start"
android:layout_width="283dp"
android:layout_height="match_parent">

<fragment
    android:id="@+id/id_left_menu"
    android:name="com.example.administrator.zhixueproject.fragment.LeftFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true" />

</RelativeLayout>

    </android.support.v4.widget.DrawerLayout>